--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-      -name Build the Docker image
+    -name: Build the Docker image
       run: docker build . --file Dockerfile --tag svn-server:$(date +%s)
-      -name: Docker Push
+    -name: Docker Push
       run: docker push ${{screts.DOCKER_USER}}/svn-server
